--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                <div class="card"  data-aos="zoom-in" data-aos-offset="200">
       <div class="card-body">
       <img src="img/s4.jpg" class="img-fluid img-thumbnail rounded-circle border border-primary">
-        <h5 class="card-title mt-4">Andrew </h5>
+        <h5 class="card-title mt-4">Shivam </h5>
         <p class="card-text">Front end Developer</p>
         <a href="#" class="btn btn-primary">Read more</a>
       </div>
