--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
   </footer>
 <div class=" p-2 text-center bg-primary text-white container-fluid">
-    <h4>Developed by Nilesh Dadheech</h4>
+    <h4>Developed by Shivam Pandey</h4>
   </div>
 <!--contact end-->
 
