--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                <div class="card"  data-aos="zoom-in" data-aos-offset="200">
       <div class="card-body">
       <img src="img/s4.jpg" class="img-fluid img-thumbnail rounded-circle border border-primary">
-        <h5 class="card-title mt-4">Shivam </h5>
+        <h5 class="card-title mt-4">Alpha </h5>
         <p class="card-text">Front end Developer</p>
         <a href="#" class="btn btn-primary">Read more</a>
       </div>
@@ -274,7 +274,7 @@
                <div class="card"  data-aos="fade-up" data-aos-offset="200">
       <div class="card-body">
       <img src="img/s2.jpg" class="img-fluid img-thumbnail rounded-circle border border-primary">
-        <h5 class="card-title mt-4">Keren D'souza</h5>
+        <h5 class="card-title mt-4">Beta</h5>
         <p class="card-text">App Developer</p>
         <a href="#" class="btn btn-primary">Read more</a>
       </div>
@@ -284,7 +284,7 @@
                <div class="card"  data-aos="zoom-in-up" data-aos-offset="200">
       <div class="card-body">
       <img src="img/s3.jpg" class="img-fluid img-thumbnail rounded-circle border border-primary">
-        <h5 class="card-title mt-4">Kristina</h5>
+        <h5 class="card-title mt-4">Gama</h5>
         <p class="card-text">Full stack web Developer</p>
         <a href="#" class="btn btn-primary">Read more</a>
       </div>
